test/classes/deinitializers/deinitExplicitCall.good
deinitExplicitCall.chpl:6: error: direct calls to deinit() are not allowed
deinitExplicitCall.chpl:10: error: direct calls to deinit() are not allowed
